updated sign up

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                             </div>
                          </div>
                          <div class="form-group row">
-                              <label for="colFormLabel" class="col-md-2" id="signup_state">State</label>
+                              <label for="colFormLabel" class="col-md-2" >State</label>
                         <div class="col-md-6">
-                            <select class="form-control">
+                            <select class="form-control" id="signup_state">
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
                                 <option value="AZ">Arizona</option>
@@ -181,30 +181,30 @@
                                         <label for="find-us">What types of food would you like to eat?</label>
                                     </div>
                                     <div class="col span-2-of-3">
-                                        <input type="checkbox" class="check"/>American
+                                        <input type="checkbox" class="check" value="American"/>American
                                         <br/>
-                                        <input type="checkbox" class="check"/>Burgers
+                                        <input type="checkbox" class="check" value="Burgers"/>Burgers
                                         <br/>
-                                        <input type="checkbox" class="check"/>Chinese
+                                        <input type="checkbox" class="check" value="Chinese"/>Chinese
                                         <br/>
-                                        <input type="checkbox" class="check"/>Italia
+                                        <input type="checkbox" class="check" value="Italian"/>Italian
                                         <br/>
-                                        <input type="checkbox" class="check">Japanese
+                                        <input type="checkbox" class="check" value="Japanese">Japanese
                                         <br/>
-                                        <input type="checkbox" class="check">Mexican
+                                        <input type="checkbox" class="check" value="Mexican">Mexican
                                        </div>
                                        <div class="col span-3-of-3">
-                                        <input type="checkbox" class="check">Pasta
+                                        <input type="checkbox" class="check" value="Pasta">Pasta
                                         <br/>
-                                        <input type="checkbox" class="check">Pizza
+                                        <input type="checkbox" class="check" value="Pizza">Pizza
                                         <br/>
-                                        <input type="checkbox" class="check"/>Sandwiches
+                                        <input type="checkbox" class="check" value="Sandwiches"/>Sandwiches
                                         <br/>
-                                        <input type="checkbox" class="check"/>Seafood
+                                        <input type="checkbox" class="check" value="Seafood"/>Seafood
                                         <br/>
-                                        <input type="checkbox" class="check"/>Steak
+                                        <input type="checkbox" class="check" value="Steak"/>Steak
                                         <br/>
-                                        <input type="checkbox" class="check"/>Sushi
+                                        <input type="checkbox" class="check" value="Sushi"/>Sushi
                                         <br/>
                                         </div>
                             </div> 
