updated sign up

--- a/index.html
+++ b/index.html
@@ -110,11 +110,19 @@
                                 </div>
                             </div> 
  
+                            <div class="row">
+                                <div class="col col-md-2">
+                                    <label for="email">Password</label>
+                                </div>
+                                <div class="col-md-6">
+                                <input type="text"  name="password" class="form-control" id="signup_password" placeholder="Enter your password" required>
+                            </div>
+                        </div> 
  
                          <div class="form-group row">
                             <label for="colFormLabel" class="col-md-2">City</label>
                             <div class="col-md-6">
-                                <input type="text" id="signup_city" class="form-control" placeholder="Enter your city">
+                                <input type="text" id="signup_city" class="form-control" placeholder="Enter your city" required>
                             </div>
                          </div>
                          <div class="form-group row">
@@ -211,7 +219,7 @@
             
                     <div class="row">
                             <label>&nbsp;</label>
-                        <a class="btn btn-full" id="subscribeSubmitBtn" data-dismiss="modal" href="#">Submit</a>
+                        <input type="submit" id="subscribeSubmitBtn"  href="#"></input>
                     
                 </div>      
                         </form>
