updated sign up

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                                         <input type="checkbox" class="check" value="Japanese">Japanese
                                         <br/>
                                         <input type="checkbox" class="check" value="Mexican">Mexican
+                                        <br/>
+                                        <input type="checkbox" id="checkAll" value="Check All">Check All
+                                        <br/>
                                        </div>
                                        <div class="col span-3-of-3">
                                         <input type="checkbox" class="check" value="Pasta">Pasta
@@ -214,6 +217,7 @@
                                         <br/>
                                         <input type="checkbox" class="check" value="Sushi"/>Sushi
                                         <br/>
+
                                         </div>
                             </div> 
             
