updated search by name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
    
     <div id="home_search_box">
-        <h4 id="search_box_label">Search restaurants</h4>
+        <h2 id="search_box_label">Search restaurants</h2>
         <div class="form-group row">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Search By</label>
             <div class="col-sm-3">
@@ -101,7 +101,7 @@
 
 
          </div>
-         <a class="btn btn-ghost" href="search.html" id="home_search-btn">Search</a>    
+         <a class="btn btn-full" href="search.html" id="home_search-btn">Search</a>    
     </div>
 
         <!-- subscribe modal-->
