--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
 
         <div class="container shadow">
             <div id="search_box">
-                <h4 id="search_box_label">Search restaurants</h4>
+                <h2 id="search_box_label">Search restaurants</h2>
                 <div class="form-group row">
                     <label for="colFormLabel" class="col-sm-2 col-form-label">Search By</label>
                     <div class="col-sm-3">
@@ -86,7 +86,7 @@
 
 
                  </div>
-                 <a class="btn btn-ghost" href="#" id="search-btn">Search</a>    
+                 <a class="btn btn-full" href="#" id="search-btn">Search</a>    
             </div>
                 <div id="loading">
                     <div class="spinner-grow text-light" role="status">
