--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
 
 
- <!-- subscribe modal-->
+ <!-- sign in modal-->
  <div id="modal_5" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
