updated sign in

--- a/search.html
+++ b/search.html
@@ -15,6 +15,7 @@
         <nav>
             <div class="row">
                 <a id="logo" href="index.html"><img id="logo_img" src="resources/img/logo-white.png" alt="omnifood logo" class="logo rounded-circle"></a>
+                <h4 id="displayName"></h4>
             </div>
         </nav>
 
@@ -223,6 +224,7 @@
         crossorigin="anonymous"></script>
         <script src="assets/search.js"></script>
         <script src="assets/functions.js"></script>
+        <script src="assets/main.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYcGgehhS1tJ1xhTwxY_2v8UOJNjKWzKM"></script>
   
 </body>
