--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <ul class="main-nav">
                 <li><a href="#" id="subscribe-btn" data-toggle="modal" data-target="#modal_4">Sign up</a></li>
                <li><a href="#" id="subscribe-btn" data-toggle="modal" data-target="#modal_5">Sign in</a></li>
+               <li><a href="#" id="signout_button" >Sign out</a></li>
+
                <h4 id="displayName"></h4>
 
             </ul>
