--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                             </blockquote>
                         </div>
             </div> 
-            <a class="btn btn-full" href="#" id="add_comment_btn" data-toggle="modal" data-target="#comment_modal">Add Comment</a>
+            <a class="btn btn-full" href="#" id="add_comment_btn" data-toggle="modal" data-target="#comment_modal">Leave Comment</a>
             <!-- Add comment modal -->
 <div class="modal fade" id="comment_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
