--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
     </section>
         <section class="section-testimonials">
             <div class="row">
-                <h2>Our customers can't live without us</h2>
+                <h2 class="center">Our customers can't live without us</h2>
 
 
             </div>
