added error message for contact us

--- a/index.html
+++ b/index.html
@@ -499,7 +499,8 @@
                 </div>
                 <div class="col span-2-of-3">
                     <a class="btn btn-full" id="contact_send_btn" href="#">Send</a>
-                    <div id="contact_sent_msg"></div>
+                    <div id="contact_status"></div>
+                    <div id="contact_status_error"></div>
             </div>
         </div>      
                 </form>
