--- a/search.html
+++ b/search.html
@@ -12,12 +12,12 @@
   </head>
 <body>
     <div id="search_body">
-        <nav>
             <div class="row">
                 <a id="logo" href="index.html"><img id="logo_img" src="resources/img/logo-white.png" alt="omnifood logo" class="logo rounded-circle"></a>
-                <h4 id="displayName"></h4>
             </div>
-        </nav>
+        <ul class="main-nav-search">
+           <h4 id="displayName"></h4>
+        </ul>
 
         <div class="container shadow">
             <div id="search_box">
