--- a/index.html
+++ b/index.html
@@ -41,75 +41,65 @@
     </header>
    
     <div id="home_search_box">
-        <h2 id="search_box_label">Search restaurants</h2>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Search By</label>
-            <div class="col-sm-3">
-                <select class="form-control" id="searcharea" required>
-                    <option selected value="Current Location">Current Location</option>
-                    <option id="zipcode_option">Zip Code</option>
-                    <option id="name_option">Name</option>
-                </select>
-            </div>
+            <h2 id="search_box_label">Search restaurants</h2>
+            <div class="form-group row">
+                <label for="colFormLabel" class="col-sm-2 col-form-label">Search By</label>
+                <div class="col-sm-3">
+                    <select class="form-control" id="searcharea" required>
+                        <option selected value="Current Location">Current Location</option>
+                        <option id="zipcode_option">Zip Code</option>
+                        
+                    </select>
+                </div>
+                <label class="col-form-label col-sm-2">Zip Code</label>
+                <div class="col-sm-3">
+                    <input class="form-control" id="zipcode" placeholder="Enter the zip code" required>
+                </div>
+                </div>
+          <div class="form-group row" id="name_section">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Distance (mile)</label>
-            <div class="col-sm-3">
-                <input type="text" class="form-control" id="distance" value="3">
-            </div>
-              </div>
-
-        <div class="form-group row" id="zipcode_section">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Zip Code</label>
-            <div class="col-sm-3">
-                <input class="form-control" id="zipcode" placeholder="Enter the zip code" required>
-            </div>
-        </div>
-      <div class="form-group row" id="name_section">
-        <label for="colFormLabel" class="col-sm-2 col-form-label">Name</label>
-        <div class="col-sm-3">
-                <input type="text" class="form-control" id="place_name" value="All">
-        </div>
-      </div>
-
-         <div class="form-group row">
-
-          <label for="colFormLabel" class="col-sm-2 col-form-label">Type</label>
-          <div class="col-sm-3">
-            <select class="form-control" id="type" required>
-              <option selected value="All">All</option>
-              <option>American</option>
-              <option>Burgers</option>
-              <option>Chinese</option>
-              <option>Italian</option>
-              <option>Japanese</option>
-              <option>Mexican</option>
-              <option>Pasta</option>
-              <option>Pizza</option>
-              <option>Sandwiches</option>
-              <option>Seafood</option>
-              <option>Steak</option>
-              <option>Sushi</option>
-            </select>
+                <div class="col-sm-3">
+                    <input type="text" class="form-control" id="distance" value="3">
+                </div>
+                <label for="colFormLabel" class="col-sm-2 col-form-label">Type</label>
+                <div class="col-sm-3">
+                  <select class="form-control" id="type" required>
+                    <option selected value="All">All</option>
+                    <option>American</option>
+                    <option>Burgers</option>
+                    <option>Chinese</option>
+                    <option>Italian</option>
+                    <option>Japanese</option>
+                    <option>Mexican</option>
+                    <option>Pasta</option>
+                    <option>Pizza</option>
+                    <option>Sandwiches</option>
+                    <option>Seafood</option>
+                    <option>Steak</option>
+                    <option>Sushi</option>
+                  </select>
+                </div>
           </div>
 
-
-          <label for="colFormLabel" class="col-sm-2 col-form-label">Min Rating</label>
-          <div class="col-sm-3">
-            <select class="form-control" id="rating" required>
-              <option selected value="3">3</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
+             <div class="form-group row">
+                <label for="colFormLabel" class="col-sm-2 col-form-label">Min Rating</label>
+                <div class="col-sm-3">
+                  <select class="form-control" id="rating" required>
+                    <option selected value="3">3</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                  </select>
+                  </div>
+          <label for="colFormLabel" class="col-sm-2 col-form-label">Name</label>
+            <div class="col-sm-3">
+                    <input type="text" class="form-control" id="place_name" value="All">
             </div>
-
-
-
-
-         </div>
-         <a class="btn btn-full" href="search.html" id="home_search-btn">Search</a>    
-    </div>
+             </div>
+             <a class="btn btn-full" href="search.html" id="home_search-btn">Search</a>    
+        </div>
 
         <!-- sign up-->
         <div id="modal_4" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -421,6 +411,7 @@
                         </div>
             </div> 
             <a class="btn btn-full" href="#" id="add_comment_btn" data-toggle="modal" data-target="#comment_modal">Leave Comment</a>
+            
             <!-- Add comment modal -->
 <div class="modal fade" id="comment_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
