--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                <li><a href="#" id="signout_button" >Sign out</a></li>
 
                <h4 id="displayName"></h4>
-
             </ul>
             
 
@@ -150,6 +149,7 @@
                             </div>
                         </div> 
  
+                       
                          <div class="form-group row">
                             <label for="colFormLabel" class="col-md-2">City</label>
                             <div class="col-md-6">
@@ -214,6 +214,10 @@
                             </select>				
                         </div>
                      </div>
+
+                     <form action="/action_page.php">
+                        <input id="bannerImg"  type="file" name="pic" accept="image/*">
+                      </form>
  
                             <div class="row">
                                     <div class="col span-1-of-3">
