aligned the headers

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
 
             <div class="hero-text-box">
-                <h1>Find the best <br> of what you're hungry for.</h1>
+                <h1>Find the best <br> of what you're hungry for</h1>
                 <a class="btn btn-full" href="#"> I'm hungry </a>
                 <a class="btn btn-ghost" href="#"> Show me more </a>
             </div>
@@ -387,7 +387,7 @@
        
     </section>
         <section class="section-testimonials">
-            <div class="row">
+            <div class="row" id="testimonial-header">
                 <h2 class="center">Our customers can't live without us</h2>
 
 
@@ -441,7 +441,7 @@
       </div>
         </section>
         <section class="section-form">
-            <div class="row">
+            <div class="row" id="comment-header">
                 <h2>We're happy to hear from you</h2>
 
             </div>
