added new logo to search.html

--- a/search.html
+++ b/search.html
@@ -13,7 +13,7 @@
 <body>
     <div id="search_body">
             <div class="row">
-                <a id="logo" href="index.html"><img id="logo_img" src="resources/img/logo-white.png" alt="omnifood logo" class="logo rounded-circle"></a>
+                <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="omnifood logo" class="logo rounded-circle"></a>
             </div>
         <ul class="main-nav-search">
            <h4 id="displayName"></h4>
