--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="copyright">
                 <p>
                     Copyright &copy; 2019 by Toxic Sushi. All rights reserved.
                 </p>
