changed names for food and centered footer

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                                 <figure class="meal-photo" id="sandwhich">
                                                     
                                                     <img src="resources/img/sandwhich.jpg" alt="sandwhich_food">
-                                                    <div class="meal-header">sandwhich</div> 
+                                                    <div class="meal-header">sandwhiches</div> 
                                                 </figure>
                                             </li>
                                             <li>
