--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
             <div class="hero-text-box">
                 <h1>Find the best <br> of what you're hungry for</h1>
-                <a class="btn btn-full" href="#"> I'm hungry </a>
-                <a class="btn btn-ghost" href="#"> Show me more </a>
+                <a class="btn btn-full" href="#" id="hungry"> I'm hungry </a>
+                <a class="btn btn-ghost" href="#" id="more"> Show me more </a>
             </div>
 
     </header>
