connected search function with the meal images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <nav>
                 <div class="row">
-                    <img src="resources/img/ts logo.jpg" alt="toxic sushi logo" class="logo">
+                    <img src="resources/img/ts logo.jpg" alt="toxic sushi logo" class="logo rounded-circle">
                     
                 </div>
             </nav>
