changed the meal image values

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 <figure class="meal-photo" id="texmex">
                                     
                                     <img src="resources/img/texmex.jpg" alt="tex_mex_food">
-                                    <div class="meal-header">Tex Mex</div> 
+                                    <div class="meal-header">Mexican</div> 
                                 </figure>
                             </li>
                             <li>
@@ -392,7 +392,7 @@
                                                 <figure class="meal-photo" id="seafood">
                                                     
                                                     <img src="resources/img/seafood.jpg" alt="seafood_food">
-                                                    <div class="meal-header">Sea Food</div> 
+                                                    <div class="meal-header">Seafood</div> 
                                                 </figure>
                                             </li>
         </ul>
