added modal close

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             
                     <div class="row">
                             <label>&nbsp;</label>
-                        <input type="submit" id="subscribeSubmitBtn"  href="#"></input>
+                        <input type="submit" id="subscribeSubmitBtn" data-dismiss="modal" href="#"></input>
                     
                 </div>      
                         </form>
