--- a/search.html
+++ b/search.html
@@ -201,7 +201,7 @@
             </div>
             <div class="row">
                 <p>
-                    Copyright &copy; 2019 by Omnifood. All rights reserved.
+                    Copyright &copy; 2020 by Toxic Sushi. All rights reserved.
                 </p>
             </div>
         </footer>
