added server.js, moved directories to public, created aapi routes

--- a/public/search.html
+++ b/public/search.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/search.css">
+    <link rel="stylesheet" href="css/search.css">
   </head>
 <body>
     <div id="search_body">
@@ -20,6 +20,7 @@
         </ul>
 
         <div class="container shadow">
+            <a href="#" class="btn btn-full" id="floater">Find Nearby Places</a>
             <div id="search_box">
                 <h2 id="search_box_label">Search restaurants</h2>
                 <div class="form-group row">
@@ -213,9 +214,9 @@
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
-        <script src="assets/search.js"></script>
-        <script src="assets/functions.js"></script>
-        <script src="assets/main.js"></script>
+        <script src="js/search.js"></script>
+        <script src="js/functions.js"></script>
+        <script src="js/main.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYcGgehhS1tJ1xhTwxY_2v8UOJNjKWzKM"></script>
   
 </body>
