--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="assets/search.css">
+        <link rel="stylesheet" href="css/search.css">
         <title>Toxic Sushi</title>
 
     </head>
@@ -96,7 +96,7 @@
                     <input type="text" class="form-control" id="place_name" value="All">
             </div>
              </div>
-             <a class="btn btn-full" href="search.html" id="home_search-btn">Search</a>    
+             <a class="btn btn-full" href="search" id="home_search-btn">Search</a>    
         </div>
 
         <!-- sign up-->
@@ -544,8 +544,8 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="assets/functions.js"></script>
-<script src="assets/main.js"></script>
+<script src="js/functions.js"></script>
+<script src="js/main.js"></script>
     </body>
 </html>
 
