adding route for places.html

--- a/public/search.html
+++ b/public/search.html
@@ -20,7 +20,7 @@
         </ul>
 
         <div class="container shadow">
-            <a href="#" class="btn btn-full" id="floater">Find Nearby Places</a>
+            <a href="places" class="btn btn-full" id="floater">Find Nearby Places</a>
             <div id="search_box">
                 <h2 id="search_box_label">Search restaurants</h2>
                 <div class="form-group row">
