added drop down for sign up , sign in, sign out

--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,25 @@
                 </div>
             </nav>
 
-            <ul class="main-nav">
+            <!-- <ul class="main-nav">
                 <li><a href="#" id="subscribe-btn" data-toggle="modal" data-target="#modal_4">Sign up</a></li>
                <li><a href="#" id="subscribe-btn" data-toggle="modal" data-target="#modal_5">Sign in</a></li>
                <li><a href="#" id="signout_button" >Sign out</a></li>
 
                <h4 id="displayName"></h4>
-            </ul>
-            
+            </ul> -->
+          
+                  <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Dropdown button
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                               <li><a href="#" id="subscribe-btn" data-toggle="modal" data-target="#modal_4">Sign up</a></li> 
+                                <li><a href="#" id="subscribe-btn" data-toggle="modal" data-target="#modal_5">Sign in</a></li>
+                                <li><a href="#"  id="signout_button">Sign out</a></li>
+                        </div>
+                      </div>
+
 
             <div class="hero-text-box">
                 <h1>Find the best <br> of what you're hungry for</h1>
@@ -38,6 +49,7 @@
 
     </header>
    
+
     <div id="home_search_box">
             <h2 id="search_box_label">Search restaurants</h2>
             <div class="form-group row">
