added some pictures

--- a/public/search.html
+++ b/public/search.html
@@ -13,14 +13,15 @@
 <body>
     <div id="search_body">
             <div class="row">
-                <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="omnifood logo" class="logo rounded-circle"></a>
+                <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="toxic sushi logo" class="logo rounded-circle"></a>
             </div>
         <ul class="main-nav-search">
            <h4 id="displayName"></h4>
         </ul>
 
         <div class="container shadow">
-            <a href="places" class="btn btn-full" id="floater">Find Fun Nearby</a>
+          <a  href="places">
+            <img src="assets/images/balloon_PNG.png" alt="balloon_PNG" class="btn-balloon" id="floater"></img></a>
             <div id="search_box">
                 <h2 id="search_box_label">Search restaurants</h2>
                 <div class="form-group row">
