resized the balloon

--- a/public/search.html
+++ b/public/search.html
@@ -20,7 +20,7 @@
         </ul>
 
         <div class="container shadow">
-          <a  href="places">
+          <a class="baloon_a" href="places">
             <img src="assets/images/balloon_PNG.png" alt="balloon_PNG" class="btn-balloon" id="floater"></img></a>
             <div id="search_box">
                 <h2 id="search_box_label">Search restaurants</h2>
