--- a/public/places.html
+++ b/public/places.html
@@ -48,6 +48,22 @@
             
         </div>
 
+                    <!--  image modal -->
+                    <div id="modal_3" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div class="status">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                </div>
+                            <div id="modal_3_content">
+                               <img id="image_in_modal3">
+                            </div>                
+                        </div>
+                        </div>
+                    </div>
+
 </div>
     <footer>
         <div class="row">
