--- a/public/search.html
+++ b/public/search.html
@@ -96,6 +96,23 @@
                 <div id="result_container">
                 </div>
 
+
+            <!--  image modal -->
+            <div id="modal_3" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                      <div class="status">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                      </div>
+                  <div id="modal_3_content">
+                      <img id="image_in_modal3">
+                  </div>                
+              </div>
+              </div>
+          </div>
+
                                           <!--  reviews modal-->
 
   <div class="modal fade bd-example-modal-lg" id="modal_0" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
