--- a/public/favorites.html
+++ b/public/favorites.html
@@ -21,16 +21,16 @@
 
     <div class="container shadow">
              <div id="places_search_body" class="row">
-             <a class="btn btn-full quickSearch" href="#">Coffee Shop</a>
+             <!-- <a class="btn btn-full quickSearch" href="#">Coffee Shop</a>
               <a class="btn btn-full quickSearch" href="#">Shopping</a>
               <a class="btn btn-full quickSearch" href="#">Playground</a> 
                <a class="btn btn-full quickSearch" href="#">Cinema</a>
                 <a class="btn btn-full quickSearch" href="#">Bar</a>
-                 <a class="btn btn-full quickSearch" href="#">Hotel</a> 
+                 <a class="btn btn-full quickSearch" href="#">Hotel</a>  -->
                </div>
          <div class="row">
-           <input class="col-sm-3" class="form-control" id="search_keyword" placeholder="Search by Keyword">
-           <a class="btn btn-ghost" id="place_search_btn" href="">Search</a>
+           <!-- <input class="col-sm-3" class="form-control" id="search_keyword" placeholder="Search by Keyword">
+           <a class="btn btn-ghost" id="place_search_btn" href="">Search</a> -->
 
             <div id="loading">
                 <div class="spinner-grow text-light" role="status">
