added favorite and them to database

--- a/public/places.html
+++ b/public/places.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div id="places_result_container">
-            
+
         </div>
 
                     <!--  image modal -->
@@ -181,9 +181,10 @@
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
-    <script src="js/places.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/places.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYcGgehhS1tJ1xhTwxY_2v8UOJNjKWzKM"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	</body>
 </html>
