--- a/public/places.html
+++ b/public/places.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/search.css">
   </head>
 <body>
-    <div id="search_body2">
+    <div class="picture_disney" id="search_body2">
         <div class="row">
             <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="omnifood logo" class="logo rounded-circle"></a>
         </div>
