added display of the favorites

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -20,7 +20,7 @@
     </ul>
 
     <div class="container shadow">
-             <div id="places_search_body" class="row">
+             <div id="map_section" class="row">
              <!-- <a class="btn btn-full quickSearch" href="#">Coffee Shop</a>
               <a class="btn btn-full quickSearch" href="#">Shopping</a>
               <a class="btn btn-full quickSearch" href="#">Playground</a> 
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div id="places_result_container">
+        <div id="fav_result_container">
             
         </div>
 
@@ -181,9 +181,9 @@
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
+    <script src="js/favorite.js"></script>
     <script src="js/places.js"></script>
     <script src="js/functions.js"></script>
-    <script src="js/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYcGgehhS1tJ1xhTwxY_2v8UOJNjKWzKM"></script>
 	</body>
 </html>
