added delete from favorites

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                               <li id="subscribe-btn" data-toggle="modal" data-target="#modal_4">Sign up</li>
                               <li  id="subscribe-btn" data-toggle="modal" data-target="#modal_5">Sign in</li>
                               <li id="signout_button">Sign out</li>
-                              <li  id="view_favorites-button" ><a href="view_favoites">View Favorites</a></li>
+                              <li  id="view_favorites-button" ><a href="view_favorites">View Favorites</a></li>
                           </ul>
 
                       </div>
