adding headers for each pages

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/search.css">
   </head>
 <body>
-    <div id="search_body2">
+    <div id="search_body">
         <div class="row">
             <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="omnifood logo" class="logo rounded-circle"></a>
         </div>
@@ -20,18 +20,11 @@
     </ul>
 
     <div class="container shadow">
+        <h2 id="search_box_label">My Favorites</h2>
              <div id="map_section" class="row">
-             <!-- <a class="btn btn-full quickSearch" href="#">Coffee Shop</a>
-              <a class="btn btn-full quickSearch" href="#">Shopping</a>
-              <a class="btn btn-full quickSearch" href="#">Playground</a> 
-               <a class="btn btn-full quickSearch" href="#">Cinema</a>
-                <a class="btn btn-full quickSearch" href="#">Bar</a>
-                 <a class="btn btn-full quickSearch" href="#">Hotel</a>  -->
+
                </div>
          <div class="row">
-           <!-- <input class="col-sm-3" class="form-control" id="search_keyword" placeholder="Search by Keyword">
-           <a class="btn btn-ghost" id="place_search_btn" href="">Search</a> -->
-
             <div id="loading">
                 <div class="spinner-grow text-light" role="status">
                   <span class="sr-only">Loading...</span>
