--- a/public/places.html
+++ b/public/places.html
@@ -20,6 +20,7 @@
     </ul>
 
     <div class="container shadow">
+            <h2 id="search_box_label">Search Fun Places</h2>
              <div id="places_search_body" class="row">
              <a class="btn btn-full quickSearch" href="#">Coffee Shop</a>
               <a class="btn btn-full quickSearch" href="#">Shopping</a>
