fixed the name display

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -21,8 +21,8 @@
       </div>
   </nav>
     
-      <div id="search_body2">
-      <ul class="main-nav-search">
+      <div id="search_body">
+      <ul class="main-nav">
          <h4 id="displayName"></h4>
       </ul>
   
