--- a/public/places.html
+++ b/public/places.html
@@ -21,7 +21,7 @@
       </div>
   </nav>
       <div class="picture_disney" id="search_body2">
-      <ul class="main-nav-search">
+      <ul class="main-nav">
          <h4 id="displayName"></h4>
       </ul>
   
