--- a/public/search.html
+++ b/public/search.html
@@ -21,7 +21,7 @@
       </div>
   </nav>
       <div id="search_body">
-          <ul class="main-nav-search">
+          <ul class="main-nav">
              <h4 id="displayName"></h4>
           </ul>
   
